tune deployment